// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List getUsers error 1`] = `
<div
  id="usersList"
>
  Erro ao carregar o estado inicial da aplicação.
</div>
`;

exports[`List getUsers success with no users 1`] = `
<div
  id="usersList"
>
  
            Não há usuários a exibir.
          
</div>
`;

exports[`List getUsers success with users 1`] = `
<div
  id="usersList"
>
  
            
      
  <div
    class="listItem"
    id="userundefined"
  >
    
        
    <div
      class="listItemContent"
    >
      
          
      <div>
        
            
        <strong>
          Nome:
        </strong>
         My name 1
          
      </div>
      
          
      <div>
        
            
        <strong>
          E-mail:
        </strong>
         myemail1@test.com.br
          
      </div>
      
          
      <div>
        
            
        <strong>
          CPF:
        </strong>
         04080757247
          
      </div>
      
          
      <div>
        
            
        <strong>
          Telefone:
        </strong>
         11987654321
          
      </div>
      
        
    </div>
    
        
    <div
      class="listItemActions"
    >
      
          
      
      <button
        id="editundefinedButton"
      >
        Editar
      </button>
      
    
          
      
      <button
        id="deleteundefinedButton"
      >
        Excluir
      </button>
      
    
        
    </div>
    
        
      
  </div>
  
    
      
  <div
    class="listItem"
    id="userundefined"
  >
    
        
    <div
      class="listItemContent"
    >
      
          
      <div>
        
            
        <strong>
          Nome:
        </strong>
         My name 2
          
      </div>
      
          
      <div>
        
            
        <strong>
          E-mail:
        </strong>
         myemail2@test.com.br
          
      </div>
      
          
      <div>
        
            
        <strong>
          CPF:
        </strong>
         77797584192
          
      </div>
      
          
      <div>
        
            
        <strong>
          Telefone:
        </strong>
         11987654321
          
      </div>
      
        
    </div>
    
        
    <div
      class="listItemActions"
    >
      
          
      
      <button
        id="editundefinedButton"
      >
        Editar
      </button>
      
    
          
      
      <button
        id="deleteundefinedButton"
      >
        Excluir
      </button>
      
    
        
    </div>
    
        
      
  </div>
  
    
      
  <div
    class="listItem"
    id="userundefined"
  >
    
        
    <div
      class="listItemContent"
    >
      
          
      <div>
        
            
        <strong>
          Nome:
        </strong>
         My name 3
          
      </div>
      
          
      <div>
        
            
        <strong>
          E-mail:
        </strong>
         myemail3@test.com.br
          
      </div>
      
          
      <div>
        
            
        <strong>
          CPF:
        </strong>
         45486737688
          
      </div>
      
          
      <div>
        
            
        <strong>
          Telefone:
        </strong>
         11987654321
          
      </div>
      
        
    </div>
    
        
    <div
      class="listItemActions"
    >
      
          
      
      <button
        id="editundefinedButton"
      >
        Editar
      </button>
      
    
          
      
      <button
        id="deleteundefinedButton"
      >
        Excluir
      </button>
      
    
        
    </div>
    
        
      
  </div>
  
    
          
</div>
`;

exports[`List render 1`] = `
"
      <div id='listContainer' class= 'pageContainer'>
        <h3>Usuários</h3>
        
      <button id='newButton'>Cadastrar</button>
    
        <div id='usersList'></div>
      </div>
    "
`;
